Updated TC page.

--- a/work/salt-technologies/index.html
+++ b/work/salt-technologies/index.html
@@ -37,11 +37,11 @@ categories: ['back-end','front-end','WordPress','Design','UX', 'Content Strategy
     <p>This is the redesigned landing page. Though nothing was inherently wrong with the original, there was a lot of content with no clear impression of what the product being offered or where to sign up. I rebuilt it with simple, clear definition of the product along with a very obvious call to action.</p>
     <div class="small-12 medium-6 columns">
       <h6 class="section-subheader">OLD</h6>
-      <img class="project-img" src="/images/work/salt/salt-home-old.png">
+      <img src="/images/work/salt/salt-home-old.png">
     </div>
     <div class="small-12 medium-6 columns">
       <h6 class="section-subheader">NEW</h6>
-      <img class="project-img" src="/images/work/salt/salt-home-new.png">
+      <img src="/images/work/salt/salt-home-new.png">
     </div>
   </div>
 </div>
@@ -51,11 +51,11 @@ categories: ['back-end','front-end','WordPress','Design','UX', 'Content Strategy
     <p>This is the redesigned developer page. This page read much more like marketing marketing material for a non-technical audience rather than a technical page intended for developers to evaluate a product. There's no code examples, there were broken links to documentation and ambiguous, verbose descriptions of their technology. We rebuilt it with a focus on a technical audience: code examples, concise descriptions of tech, and updated links to documentation.</p>
     <div class="small-12 medium-6 columns">
       <h6 class="section-subheader">OLD</h6>
-      <img class="project-img" src="/images/work/salt/salt-developers-old.png">
+      <img src="/images/work/salt/salt-developers-old.png">
     </div>
     <div class="small-12 medium-6 columns">
       <h6 class="section-subheader">NEW</h6>
-      <img class="project-img" src="/images/work/salt/salt-developers-new.png">
+      <img src="/images/work/salt/salt-developers-new.png">
     </div>
   </div>
 </div>
@@ -67,12 +67,12 @@ categories: ['back-end','front-end','WordPress','Design','UX', 'Content Strategy
     <div class="small-12 medium-6 columns">
       <h6 class="section-subheader">OLD</h6>
       
-      <img class="project-img" src="/images/work/salt/salt-technology-old.png">
+      <img src="/images/work/salt/salt-technology-old.png">
     </div>
     <div class="small-12 medium-6 columns">
       <h6 class="section-subheader">NEW</h6>
       
-      <img class="project-img" src="/images/work/salt/salt-technology-new.png">
+      <img src="/images/work/salt/salt-technology-new.png">
     </div>
   </div>
 </div>
