--- a/work/true-currency/index.html
+++ b/work/true-currency/index.html
@@ -33,19 +33,20 @@ categories: ['back-end','front-end','cakephp','iPhone','ux','product design']
     <a href="http://www.truecurrency.com" class="blue-button">VISIT SITE</a>
   </div>
   </div>
+<section class="screenshots">
 <div class="row section text-center">
   <div class="small-12 columns">
-    <img src="/images/work/truecurrency/truecurrency-home.png">
+    <img  src="/images/work/truecurrency/truecurrency-home.png">
   </div>
 </div>
 <div class="row section text-center">
   <div class="small-12 columns">
-    <img src="/images/work/truecurrency/truecurrency-compare-categories.png">
+    <img  src="/images/work/truecurrency/truecurrency-compare-categories.png">
   </div>
 </div>
 <div class="row section text-center">
   <div class="small-12 columns">
-    <img src="/images/work/truecurrency/truecurrency-compare-products.png">
+    <img  src="/images/work/truecurrency/truecurrency-compare-products.png">
   </div>
 </div>
 
@@ -56,23 +57,23 @@ categories: ['back-end','front-end','cakephp','iPhone','ux','product design']
   </div>
 </div>
 
-<div class="row section text-center">
+<div class="row section text-center no-borders">
   <div class="small-12 medium-6 columns">
-    <img src="/images/work/truecurrency/twurrl-iphone5-index-420w.png">
+    <img  src="/images/work/truecurrency/twurrl-iphone5-index-420w.png">
   </div>
   <div class="small-12 medium-6 columns">
-    <img src="/images/work/truecurrency/twurrl-iphone5-price-420w.png">
-  </div>
-</div>
-<div class="row section text-center">
-  <div class="small-12 medium-6 columns">
-    <img src="/images/work/truecurrency/twurrl-iphone5-login-420w.png">
-  </div>
-  <div class="small-12 medium-6 columns">
-    <img src="/images/work/truecurrency/twurrl-iphone5-register-420w.png">
+    <img   src="/images/work/truecurrency/twurrl-iphone5-price-420w.png">
   </div>
 </div>
-
+<div class="row section text-center  no-borders">
+  <div class="small-12 medium-6 columns">
+    <img  src="/images/work/truecurrency/twurrl-iphone5-login-420w.png">
+  </div>
+  <div class="small-12 medium-6 columns">
+    <img  src="/images/work/truecurrency/twurrl-iphone5-register-420w.png">
+  </div>
+</div>
+</section>
 <div class="row section text-center">
   <div class="small-12 columns">
     <h6 class="section-subheader">SPECIAL THANKS</h6>
