Removed 2tee Couture.

--- a/work/2tee-couture/index.html
+++ b/work/2tee-couture/index.html
@@ -31,24 +31,26 @@ categories: ['back-end','front-end','Shopify','Ruby','Sinatra','UX', 'Responsive
     <a href="http://www.2teecouture.com" class="blue-button">VISIT SITE</a>
   </div>
 </div>
-<div class="row section text-center">
-  <div class="small-12 medium-6 columns">
-    <h5 class="section-header">OLD HOMEPAGE</h5>
-    <img style="border: 1px solid #767676;" src="/images/work/2teecouture/2tee-couture-home-old.png">
+<section class="screenshots">
+  <div class="row section text-center">
+    <div class="small-12 medium-6 columns">
+      <h5 class="section-header">OLD HOMEPAGE</h5>
+      <img src="/images/work/2teecouture/2tee-couture-home-old.png">
+    </div>
+    <div class="small-12 medium-6 columns">
+      <h5 class="section-header">NEW HOMEPAGE</h5>
+      <img src="/images/work/2teecouture/2tee-couture-home.png">
+    </div>
   </div>
-  <div class="small-12 medium-6 columns">
-    <h5 class="section-header">NEW HOMEPAGE</h5>
-    <img style="border: 1px solid #767676;" src="/images/work/2teecouture/2tee-couture-home.png">
+  <div class="row section text-center">
+    <h5 class="section-header">NEW SHOP PAGES</h5>
+    <div class="small-12 columns">
+      <img src="/images/work/2teecouture/2tee-couture-shop.jpg">
+    </div>
   </div>
-</div>
-<div class="row section text-center">
-  <h5 class="section-header">NEW SHOP PAGES</h5>
-  <div class="small-12 columns">
-    <img style="border: 1px solid #767676;" src="/images/work/2teecouture/2tee-couture-shop.jpg">
+  <div class="row section text-center">
+    <div class="small-12 columns">
+      <img src="/images/work/2teecouture/2tee-couture-product.jpg">
+    </div>
   </div>
-</div>
-<div class="row section text-center">
-  <div class="small-12 columns">
-    <img style="border: 1px solid #767676;" src="/images/work/2teecouture/2tee-couture-product.jpg">
-  </div>
-</div>
+</section>
