Added a simpler tagline.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ title: HOME
 <div class="home">
   <div class="row section blue tagline-container">
     <div class="row">
-    <div class="small-10 small-offset-1 columns hero taglines">
-        <h2>Straightforward software design, engineering, and consulting.</h2>
+    <div class="small-12 medium-8 medium-offset-2  columns hero taglines">
+        <h2>{{ site.description }}</h2>
       </div>
     </div>
   </div>
