Changed wording on SALT page.

--- a/work/salt-technologies/index.html
+++ b/work/salt-technologies/index.html
@@ -34,7 +34,7 @@ categories: ['back-end','front-end','WordPress','Design','UX', 'Content Strategy
 <div class="row section ">
   <div class="small-12 columns">
     <h5 class="section-header">LANDING PAGE</h5>
-    <p>This is the redesigned landing page. Though nothing was inherently wrong with the original, there was a lot of content with no clear impression of what the product being offered or where to sign up. I rebuilt it with simple, clear definition of the product along with a very obvious call to action.</p>
+    <p>This is the redesigned landing page. In the original, there was a lot of content with no clear impression of what the product being offered or where to sign up. I rebuilt it with simple, clear definition of the product along with a very obvious call to action.</p>
     <div class="small-12 medium-6 columns">
       <h6 class="section-subheader">OLD</h6>
       <img src="/images/work/salt/salt-home-old.png">
