Adjusted work pages.

--- a/work/oncontracting/index.html
+++ b/work/oncontracting/index.html
@@ -7,14 +7,14 @@ categories: ['Content Strategy','UX Analysis','Design', 'User Research']
 <div class="row section">
   <div class="small-12 columns">
     <h3 class="section-header">OVERVIEW</h3>
-    <p>OnContracting is a community where contract job seekers can research companies, find jobs, and connect with recruiters. It provides information to the jobseeker to empower them to make the right decision when considering what company to work for and what staffing agencies to work with. OnContracting approached me to help them analyze & improve the UX for their site.</p>
+    <p>OnContracting is a community where contract job seekers can research companies, find jobs, and connect with recruiters. It provides information to the jobseeker to empower them to make the right decision when considering what company to work for and what staffing agencies to work with. OnContracting approached us to help them analyze & improve the UX for their site.</p>
   </div>
 </div>
 <div class="row section">
   <div class="small-12 columns">
 
-    <h5 class="section-subheader">WHAT I DID</h5>
-    <p>I helped OnContracting better understand their target audience, their business goals & strategy, and the best way to attract new customers. We walked through a few UX exercises, user research, and other forms of analysis to better understand how to improve the user experience & user engagement on the site. This culminated in a redesign of the landing page, though more changes are likely to be implemented in the future.</p>
+    <h5 class="section-subheader">WHAT WE DID</h5>
+    <p>We helped OnContracting better understand their target audience, their business goals & strategy, and the best way to attract new customers. We walked through a few UX exercises, user research, and other forms of analysis to better understand how to improve the user experience & user engagement on the site. This culminated in a redesign of the landing page, though more changes are likely to be implemented in the future.</p>
   </div>
 </div>
 
