--- a/work/salt-technologies/index.html
+++ b/work/salt-technologies/index.html
@@ -7,14 +7,14 @@ categories: ['back-end','front-end','WordPress','Design','UX', 'Content Strategy
 <div class="row section">
   <div class="small-12 columns">
     <h3 class="section-header">OVERVIEW</h3>
-    <p>SALT Technologies is a financial payments startup based in San Francisco. They provide payment processing (among other financial services) for developers and merchants of any size -- small to enterprise. They approached me to help them rebuild their website with a new look & feel, and content strategy. Their old website's content was disorganized, confusing, and chaotic-- I helped them unify it and improve their messaging to be much more effective.</p>
+    <p>SALT Technologies is a financial payments startup based in San Francisco. They provide payment processing (among other financial services) for developers and merchants of any size -- small to enterprise. They approached us to help them rebuild their website with a new look & feel, and content strategy. Their old website's content was disorganized, confusing, and chaotic-- we helped them unify it and improve their messaging to be much more effective.</p>
   </div>
 </div>
 <div class="row section">
   <div class="small-12 medium-6 columns">
 
-    <h5 class="section-subheader">WHAT I DID</h5>
-    <p>I provided all the services, from content strategy, to ux design, to development. I did a full content audit of all the information they had on their old site, provided a new content strategy for their new site, and design & implemented their new site. I built their website on the Wordpress platform and customized the theme heavily to match their needs. Of course, the design was created to be responsive to have their site look good on any screen size.</p>
+    <h5 class="section-subheader">WHAT WE DID</h5>
+    <p>We provided all the services, from content strategy, to ux design, to development. We did a full content audit of all the information they had on their old site, provided a new content strategy for their new site, and design & implemented their new site. We built their website on the Wordpress platform and customized the theme heavily to match their needs. Of course, the design was created to be responsive to have their site look good on any screen size.</p>
   </div>
   <div class="small-12 medium-6 columns">
     <h5 class="section-subheader">TECHNOLOGIES</h5>
@@ -34,7 +34,7 @@ categories: ['back-end','front-end','WordPress','Design','UX', 'Content Strategy
 <div class="row section ">
   <div class="small-12 columns">
     <h5 class="section-header">LANDING PAGE</h5>
-    <p>This is the redesigned landing page. In the original, there was a lot of content with no clear impression of what the product being offered or where to sign up. I rebuilt it with simple, clear definition of the product along with a very obvious call to action.</p>
+    <p>This is the redesigned landing page. In the original, there was a lot of content with no clear impression of what the product being offered or where to sign up. We rebuilt it with simple, clear definition of the product along with a very obvious call to action.</p>
     <div class="small-12 medium-6 columns">
       <h6 class="section-subheader">OLD</h6>
       <img src="/images/work/salt/salt-home-old.png">
