--- a/work/true-currency/index.html
+++ b/work/true-currency/index.html
@@ -15,7 +15,7 @@ categories: ['back-end','front-end','cakephp','iPhone','ux','product design']
   <div class="small-12 medium-6 columns">
 
     <h5 class="section-subheader">WHAT I DID</h5>
-    <p>I'm True Currency's co-founder & CTO. I've helped develop this product from start to finish-- I've done all the engineering and have been responsible for most of the UX design-- with help from a few talented designers to make it all pretty.</p>
+    <p>I (Pavan Trikutam) am True Currency's co-founder & CTO. I've helped develop this product from start to finish-- I've done all the engineering and have been responsible for most of the UX design-- with help from a few talented designers to make it all pretty.</p>
   </div>
   <div class="small-12 medium-6 columns">
     <h5 class="section-subheader">TECHNOLOGIES</h5>
