add margin to shop page.

--- a/shop/index.html
+++ b/shop/index.html
@@ -2,42 +2,43 @@
 layout: default
 title: SHOP
 ---
-
-<div class="row section">
-  <h1 class="text-center">SHOP GRAYBIKE</h1>
-</div>
-
-<div class="row section">
-  <div class="row">
-    <div class="small-5 columns"><h5 class="section-subheader text-left">ITEM</h5></div>
-    <div class="small-3 columns text-right"><h5 class="section-subheader text-right">QTY</h5></div>
-    <div class="small-4 columns text-right"><h5 class="section-subheader text-right">PRICE</h5></div>
+<div class="shop">
+  <div class="row section">
+    <h1 class="text-center">SHOP GRAYBIKE</h1>
   </div>
 
-  <div class="row">
-    <div class="small-5 columns">Gray Bike</div>
-    <div class="small-3 columns text-right">1</div>
-    <div class="small-4 columns text-right">$99.99</div>
-  </div>
-  <div class="row">
-    <div class="small-5 columns">Gray Helmet</div>
-    <div class="small-3 columns text-right">1</div>
-    <div class="small-4 columns text-right">$79.99</div>
-  </div>
-  <div class="row">
-    <div class="small-5 columns"><strong>Subtotal</strong></div>
-    <div class="small-3 columns text-right"></div>
-    <div class="small-4 columns text-right"><strong>$179.98</strong></div>
-  </div>
-</div>
-<div class="row section">
-  <div class="small-12 columns text-center">
-    <a href="https://onetouch.salt.com/checkout/1" class="blue-button">CHECK OUT</a>
-  </div>
-</div>
+  <div class="row section">
+    <div class="row">
+      <div class="small-5 columns"><h5 class="section-subheader text-left">ITEM</h5></div>
+      <div class="small-3 columns text-right"><h5 class="section-subheader text-right">QTY</h5></div>
+      <div class="small-4 columns text-right"><h5 class="section-subheader text-right">PRICE</h5></div>
+    </div>
 
-<div class="row section blue">
-  <div class="small-12 columns text-center">
-    <span>NOTE: This is a test shopping cart to demo the capabilities of <a href="https://onetouch.salt.com/checkout/1">SALT OneTouch</a> built by <a href="http://graybike.co">Gray Bike</a>. Please do not use a real credit card in the checkout process.</span>
+    <div class="row">
+      <div class="small-5 columns">Gray Bike</div>
+      <div class="small-3 columns text-right">1</div>
+      <div class="small-4 columns text-right">$99.99</div>
+    </div>
+    <div class="row">
+      <div class="small-5 columns">Gray Helmet</div>
+      <div class="small-3 columns text-right">1</div>
+      <div class="small-4 columns text-right">$79.99</div>
+    </div>
+    <div class="row">
+      <div class="small-5 columns"><strong>Subtotal</strong></div>
+      <div class="small-3 columns text-right"></div>
+      <div class="small-4 columns text-right"><strong>$179.98</strong></div>
+    </div>
+  </div>
+  <div class="row section">
+    <div class="small-12 columns text-center">
+      <a href="https://onetouch.salt.com/checkout/1" class="blue-button">CHECK OUT</a>
+    </div>
+  </div>
+
+  <div class="row section blue">
+    <div class="small-12 columns text-center">
+      <span>NOTE: This is a test shopping cart to demo the capabilities of <a href="https://onetouch.salt.com/checkout/1">SALT OneTouch</a> built by <a href="http://graybike.co">Gray Bike</a>. Please do not use a real credit card in the checkout process.</span>
+    </div>
   </div>
 </div>
