remove header from shop page.

--- a/shop/index.html
+++ b/shop/index.html
@@ -1,10 +1,12 @@
 ---
 layout: default
 title: SHOP
+noheader: true
 ---
 <div class="shop">
-  <div class="row section">
-    <h1 class="text-center">SHOP GRAYBIKE</h1>
+  <div class="row section text-center">
+    <img src="/images/logo.png">
+    <h1>SHOP GRAY BIKE</h1>
   </div>
 
   <div class="row section">
