Make disclaimer text small

--- a/shop/index.html
+++ b/shop/index.html
@@ -38,9 +38,9 @@ noheader: true
     </div>
   </div>
 
-  <div class="row section blue">
+  <div class="row section">
     <div class="small-12 columns text-center">
-      <span>NOTE: This is a test shopping cart to demo the capabilities of <a href="https://onetouch.salt.com/checkout/1">SALT OneTouch</a> built by <a href="http://graybike.co">Gray Bike</a>. Please do not use a real credit card in the checkout process.</span>
+      <span class="disclaimer">NOTE: This is a test shopping cart to demo the capabilities of <a href="https://onetouch.salt.com/checkout/1">SALT OneTouch</a> built by <a href="http://graybike.co">Gray Bike</a>. Please do not use a real credit card in the checkout process.</span>
     </div>
   </div>
 </div>
