update many styles for blog & heroes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: HOME
 ---
 <div class="home">
-  <div class="row section blue tagline-container">
+  <div class="row section tagline-container">
     <div class="row">
       <div class="small-12 medium-8 medium-offset-2  columns hero taglines">
         <h2>{{ site.description }}</h2>
