--- a/work/salt-technology/index.html
+++ b/work/salt-technology/index.html
@@ -1,13 +1,13 @@
 ---
 layout: work
-title:  "SALT Technologies"
+title:  "SALT Technology"
 date:   2014-05-16 19:48:00
 categories: ['back-end','front-end','WordPress','Design','UX', 'Content Strategy', 'Responsive Design']
 ---
 <div class="row section">
   <div class="small-12 columns">
     <h3 class="section-header">OVERVIEW</h3>
-    <p>SALT Technologies is a financial payments startup based in San Francisco. They provide payment processing (among other financial services) for developers and merchants of any size -- small to enterprise. They approached us to help them rebuild their website with a new look & feel, and content strategy. Their old website's content was disorganized, confusing, and chaotic-- we helped them unify it and improve their messaging to be much more effective.</p>
+    <p>SALT Technology is a financial payments startup based in San Francisco. They provide payment processing (among other financial services) for developers and merchants of any size -- small to enterprise. They approached us to help them rebuild their website with a new look & feel, and content strategy. Their old website's content was disorganized, confusing, and chaotic-- we helped them unify it and improve their messaging to be much more effective.</p>
   </div>
 </div>
 <div class="row section">
