--- a/shop/index.html
+++ b/shop/index.html
@@ -5,7 +5,7 @@ noheader: true
 ---
 <div class="shop">
   <div class="row section text-center">
-    <img src="/images/logo.png">
+    <img src="/images/logo.svg">
     <h1>SHOP GRAY BIKE</h1>
   </div>
 
