--- a/shop/index.html
+++ b/shop/index.html
@@ -31,6 +31,16 @@ noheader: true
       <div class="small-3 columns text-right"></div>
       <div class="small-4 columns text-right"><strong>$179.98</strong></div>
     </div>
+    <div class="row">
+      <div class="small-5 columns"><strong>Tax</strong></div>
+      <div class="small-3 columns text-right"></div>
+      <div class="small-4 columns text-right"><strong>$16.20</strong></div>
+    </div>
+    <div class="row">
+      <div class="small-5 columns"><strong>TOTAL</strong></div>
+      <div class="small-3 columns text-right"></div>
+      <div class="small-4 columns text-right"><strong>$196.18</strong></div>
+    </div>
   </div>
   <div class="row section">
     <div class="small-12 columns text-center">
