update true currency info

--- a/work/true-currency/index.html
+++ b/work/true-currency/index.html
@@ -30,7 +30,7 @@ categories: ['back-end','front-end','cakephp','iPhone','ux','product design']
 </div>
 <div class="row section text-center">
   <div class="small-12 columns text-center">
-    <a href="http://www.truecurrency.com" class="blue-button">VISIT SITE</a>
+    <a href="http://compare.truecurrency.com" class="blue-button">VISIT SITE</a>
   </div>
   </div>
 <section class="screenshots">
