--- a/work/salt-one-touch/index.html
+++ b/work/salt-one-touch/index.html
@@ -60,7 +60,7 @@ categories: ['back-end','front-end','Design','UX', 'Wireframes', 'mobile web']
 <div class="row section ">
   <div class="small-12 columns">
     <h5 class="section-header">COMPLETED DESIGNS</h5>
-    <p>While these designs look good, to get the full experience you really should <a href="https://onetouch.salt.com/checkout/1">use the app</a>.</p>
+    <p>While these designs look good, to get the full experience you really should <a href="https://onetouch-demo.herokuapp.com/checkout/1">use the app</a>.</p>
     <div class="row">
       <div class="small-12 medium-6 columns stack">
         <img src="/images/work/salt-onetouch/checkout-screen-new-2.png">
