--- a/shop/index.html
+++ b/shop/index.html
@@ -44,13 +44,13 @@ noheader: true
   </div>
   <div class="row section">
     <div class="small-12 columns text-center">
-      <a href="https://onetouch.salt.com/checkout/1" class="blue-button">CHECK OUT</a>
+      <a href="https://onetouch-demo.herokuapp.com/checkout/1" class="blue-button">CHECK OUT</a>
     </div>
   </div>
 
   <div class="row section">
     <div class="small-12 columns text-center">
-      <span class="disclaimer">NOTE: This is a test shopping cart to demo the capabilities of <a href="https://onetouch.salt.com/checkout/1">SALT OneTouch</a> built by <a href="http://graybike.co">Gray Bike</a>. Please do not use a real credit card in the checkout process.</span>
+      <span class="disclaimer">NOTE: This is a test shopping cart to demo the capabilities of <a href="https://onetouch-demo.herokuapp.com/checkout/1">SALT OneTouch</a> built by <a href="http://graybike.co">Gray Bike</a>. Please do not use a real credit card in the checkout process.</span>
     </div>
   </div>
 </div>
